--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css?cache_id={{ cache_id }}">
     <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css?cache_id={{ cache_id }}">
     <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css?cache_id={{ cache_id }}">
+    <link rel="stylesheet" type="text/js" href="../static/scripts/1-hbnb.js?cache_id={{ cache_id }}">
     <link rel="icon" href="../static/images/icon.png?cache_id={{ cache_id }}" />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="static/scripts/1-hbnb.js?cache_id={{ cache_id }}"></script>
     <title>HBnB</title>
+
   </head>
   <body>
     <header>
@@ -41,7 +44,7 @@
 	  <div class="popover">
 	    <ul>
 	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
+	      <li><input type="checkbox", data-id=":amenity_id", data-name=":amenity_name">{{ amenity.name }}</li>
 	      {% endfor %}
 	    </ul>
 	  </div>
